--- a/src/css/local.css
+++ b/src/css/local.css
@@ -97,7 +97,7 @@
   #sbs .cs-flex-group {
     /* 16px - 32px */
     padding: clamp(1rem, 3vw, 2rem);
-    background-color: #F7F7F7;
+    background-color: #eeeeee;
     border-radius: 1rem;
     position: relative;
   }
@@ -173,7 +173,7 @@
     color: var(--bodyTextColorWhite);
   }
   body.dark-mode #sbs .cs-flex-group {
-    background-color: var(--accent);
+    background-color: var(--medium);
   }
   body.dark-mode #sbs .cs-job {
     color: var(--bodyTextColorWhite);
@@ -543,7 +543,7 @@
     padding: 3.75rem clamp(1rem, 3.2vw, 2rem) 0;
     /* 32px - 40px */
     padding-bottom: clamp(2rem, 5.4vw, 2.5rem);
-    box-shadow: 0px 20px 39px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 20px 39px 0px rgba(0, 0, 0, 0.192);
     border-radius: 0.5rem;
     background: #fffefe;
     position: relative;
@@ -660,11 +660,11 @@
   }
   #cta .title {
     font-weight: 500;
-    font-size: min(8vw, 3rem);
+    font-size: min(5vw, 2rem);
     line-height: 1.20833333;
     color: #fff;
     position: relative;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1rem;
     text-align: center;
   }
   #cta p {
@@ -681,7 +681,7 @@
 /* Small Desktop */
 @media only screen and (min-width: 64em) {
   #cta {
-    padding: 1rem 0;
+    padding: 2rem 0;
   }
 }
 /* Large Desktop */
