--- a/src/css/root.css
+++ b/src/css/root.css
@@ -4,7 +4,7 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   :root {
-    --primary: #f8a527;
+    --primary: #fcba58;
     --primaryShade: #dbb762;
     --primaryDark: #5F5F69;
     --bodyTextColor: #444343;
@@ -298,7 +298,7 @@
     border-radius: 0 0 0.375em 0.375em;
     z-index: -1;
     overflow: hidden;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.089) 0px 8px 24px;
     background-color: #fff;
     top: 3.7rem;
     padding-top: 0;
@@ -342,18 +342,19 @@
   #navigation #navbar-menu ul li a {
     text-decoration: none;
     text-transform: uppercase;
+    font-family: 'Merriweather-Sans-Light';
     color: #000;
-    font-size: 1.1875rem;
+    font-size: 1.1rem;
     text-align: center;
     display: inline-block;
     position: relative;
-    font-weight: bold;
+    font-weight: 500;
   }
   #navigation #navbar-menu ul li a.active:before {
     content: '';
     position: absolute;
     display: block;
-    height: 0.5rem;
+    height: 0.2rem;
     background: var(--primary);
     opacity: 1;
     bottom: -.5rem;
@@ -363,7 +364,7 @@
     z-index: -1;
   }
   #navigation #navbar-menu.open {
-    height: 12.25rem;
+    height: 15.25rem;
     padding-top: 2rem;
     z-index: -100;
   }
@@ -490,11 +491,11 @@
     position: absolute;
     display: block;
     width: 100%;
-    height: 0.375rem;
+    height: 0.25rem;
     background: var(--primary);
     opacity: 1;
     bottom: -0.25rem;
-    border-radius: 0.1875rem;
+    border-radius: 0.1rem;
     left: 0rem;
     right: -0.375rem;
     z-index: -1;
